# codecontext

./: .codecontext.db  .cursorrules  .env.example  .gitignore  .tmp-ci-fix.db.settings  AGENTS.md  CLAUDE.md  IMPLEMENTATION.md  Makefile  README.md  codecontext_startup.sh  go.mod  go.sum  main.go  main_test.go  pyproject.toml
.github/: .cursorrules  AGENTS.md  AI_FEATURES.md  CLAUDE.md  IMPLEMENTATION.md  WORKFLOWS.md  copilot-instructions.md
.github/hooks/: config.json
.github/workflows/: publish-pypi.yml  release.yml  test-cli.yml
pkg/ai/: chain.go  types.go
pkg/db/: db.go  models.go
pkg/indexer/: indexer.go
pkg/llm/: azure.go  config.go  ollama.go  openai.go  provider.go
pkg/mcp/: server.go
pkg/parser/: parser.go  parser_ast_test.go  types.go
pkg/parser/c/: parser.go
pkg/parser/cpp/: parser.go
pkg/parser/go/: parser.go
pkg/parser/java/: parser.go
pkg/parser/javascript/: parser.go
pkg/parser/python/: parser.go
pkg/web/: server.go  ui.go
src/codecontext/: __init__.py  ai.py  backends.py  cli.py  db.py  db_cogdb.py  db_falkordblite.py  indexer.py  llm.py  mcp.py  parser.py  storage.py  ui.html  web.py
src/codecontext.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_ai_commands.py  test_cli_smoke.py  test_docs_command.py  test_indexer_basic.py  test_mcp_tools.py  test_web_api.py
